fdo#74826: File corruption-Issue related to Series idx & order val.

Problem Description:
- If the document contains more than one charts together.
  ex.Bar & Line chart
- In that case, LO writes idx & order val equal to 0,
  instead of 1 for second chart series.
- After roundtrip, the document get corrupted.

Implementation:
- Added varible to take the series count
  in case of multiple chart.

Note:
- Some of the UT's are failing when --enable-dbgutil is enabled.

Change-Id: I40606b4d69026939fa19ae534dd7b2bb36ec97fc